ajout du contraste footer contact et correction icon des footer

--- a/style.css
+++ b/style.css
@@ -49,6 +49,15 @@ figcaption {
     margin: 6px auto;
 }
 
+.darck-footer {
+    color: black;
+}
+
+div.row.row-no-gutters.social {
+    height: 55px;
+    margin: 6px auto;
+}
+
 .bloc {
     width: 100%;
     clear: both;
@@ -496,8 +505,10 @@ button {
     box-shadow: 0 1px 3px rgba(0, 0, 1, .25), inset 0 1px 0 0 rgba(255, 255, 255, .15);
 }
 
-span.icon-size {
+.icon-size {
     font-size: 30px;
+    height: 30px;
+    width: 30px;
 }
 
 .icon-lg {
